fixed strings.xml on Aug 29, 2018

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string-array name="h3_items">
         <item>Insidious Chapter 3</item>
         <item>It Follows</item>
-        <item>We're Still Here</item>
+        <item>We"'"re Still Here</item>
     </string-array>
 </resources>
